# ChangeLog for net-nds/389-admin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jan 2010; <slep@gentoo.org> -389-admin-1.1.8-r1.ebuild:
  drop old version

  22 Jan 2010; <slep@gentoo.org> metadata.xml:
  add long description in metadata

  18 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +389-admin-1.1.10_alpha2.ebuild:
  bump

  27 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +files/1.1.9-apache2-httpd.conf.patch, 389-admin-1.1.9-r1.ebuild:
  add httpd.conf patch

  26 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru> 389-admin-1.1.9.ebuild,
  +389-admin-1.1.9-r1.ebuild:
  add ipv6 use,version bump

  25 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +files/1.1.9/0001-gentoo-apache-names.patch, 389-admin-1.1.9.ebuild,
  +files/1.1.9/0002-gentoo-brand-name.patch:
  add more patches

  25 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -files/fedora-ds-admin-1.1.5-cfgstuff-1.patch, 389-admin-1.1.9.ebuild:
  remove old patch

  25 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +389-admin-1.1.9.ebuild:
  version bump

  07 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -389-admin-1.1.8.ebuild:
  delete old revision

  07 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  389-admin-1.1.8-r1.ebuild:
  clean depend version

  24 Aug 2009; Mario Fetka <mario.fetka@gmail.com>
  -files/389-adminutil.patch, -389-admin-1.1.7.ebuild,
  -files/389-admin-1.1.7-389-adminutil-1.patch, 389-admin-1.1.8.ebuild,
  -files/fedora-ds-admin-cvs.sh:
  add my mirror for the package

  23 Jul 2009; Mario Fetka <mario.fetka@gmail.com>
  files/389-adminutil.patch:
  correct patch 2nd try

  23 Jul 2009; Mario Fetka <mario.fetka@gmail.com>
  +files/389-adminutil.patch, 389-admin-1.1.8.ebuild:
  correct patch

  23 Jul 2009; Mario Fetka <mario.fetka@gmail.com> 389-admin-1.1.8.ebuild:
  correct config flag

*389-admin-1.1.8 (23 Jul 2009)

  23 Jul 2009; Mario Fetka <mario.fetka@gmail.com> +389-admin-1.1.8.ebuild:
  Bump
